# RAGCoach

./: .dockerignore  .env  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  model.ipynb  pyproject.toml  qdrant_loader.py
ARCHITECTURE/: index.html
DATASET/: index.html
DATA_FORMATS/: index.html
data/: output.json  questions.txt
data/example/: ideal.json
data/lections/: Лекция 01.txt  Лекция 02.txt  Лекция 03.txt  Лекция 04.txt  Лекция 05.txt  Лекция 06.txt  Лекция 07.txt  Лекция 08.txt  Лекция 09.txt
db/: add_user.py
db/init/: 01_schema.sql  02_insert_students.sql
docs/: ARCHITECTURE.md  DATA_FORMATS.md  index.md
notebooks/: 00_dataset_overview.ipynb
search/: search_index.json
src/RAGCoach/: __init__.py  api.py  main.py
src/RAGCoach/application/: __init__.py
src/RAGCoach/application/frontend/: index.html
src/RAGCoach/application/frontend/static/: app.js  style.css
src/RAGCoach/application/ports/: llm_gateway.py
src/RAGCoach/application/use_cases/: __init__.py  evaluate_with_rag.py  grade_answer.py
src/RAGCoach/embeddings/: model.py
src/RAGCoach/infrastructure/: __init__.py  settings.py
src/RAGCoach/infrastructure/db/: __init__.py  lecture_json_uploader.py  qdrant_loader.py  qdrant_service.py  question_search.py  reader_pdf.py
src/RAGCoach/infrastructure/llm/: __init__.py  ollama_gateway.py
src/RAGCoach/scripts/: dataset_overview_pipeline.py  ingest_lectures.py
