[project]
name = "ragcoach"
version = "0.1.0"
description = "RAGCoach"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pydantic-settings",
    "qdrant-client",
    "sentence-transformers",
    "pdfplumber",
    "ollama",
    "fastapi",
    "uvicorn",
    "python-multipart"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ragcoach = [
    "application/frontend/index.html",
    "application/frontend/static/*",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "black>=24.10.0"
]
